# Eye-Blink-Detection-using-MediaPipe-and-OpenCV

./: .gitignore  FaceMeshModule.py  README.md  blink_annotator.py  blink_counter.py  blink_counter_and_EAR_plot.py  pyproject.toml  requirements.txt  utils.py
